--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: go
 go:
   - 1.4
+before_install:
+  - sudo apt-get update
+  - sudo apt-get install -qq libxxf86vm-dev
 install:
   - go get golang.org/x/tools/cmd/vet
 script:
