--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,19 @@
+sudo: false
+addons:
+  apt_packages:
+    - libxxf86vm-dev
 language: go
 go:
-  - 1.4
-before_install:
-  - sudo apt-get update
-  - sudo apt-get install -qq libxxf86vm-dev
+  - 1.6.2
+  - tip
+matrix:
+  allow_failures:
+    - go: tip
+  fast_finish: true
 install:
-  - go get golang.org/x/tools/cmd/vet
+  - # Do nothing. This is needed to prevent default install action "go get -t -v ./..." from happening here (we want it to happen inside script step).
 script:
   - go get -t -v ./...
-  - diff -u <(echo -n) <(gofmt -d ./)
-  - go tool vet ./
+  - diff -u <(echo -n) <(gofmt -d -s .)
+  - go tool vet .
   - go test -v -race ./...
