--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,15 @@
 sudo: false
 addons:
   apt_packages:
-    - libxxf86vm-dev
+    - libgl1-mesa-dev
+    - xorg-dev
 language: go
 go:
-  - 1.7.1
-  - tip
+  - 1.x
+  - master
 matrix:
   allow_failures:
-    - go: tip
+    - go: master
   fast_finish: true
 install:
   - # Do nothing. This is needed to prevent default install action "go get -t -v ./..." from happening here (we want it to happen inside script step).
